@@ -2238,14 +2238,20 @@ static const char* canon_BJC_i950_modeuses_plain[] = {
   };
 
 static const char* canon_BJC_i950_modeuses_PPpro[] = {
-  "600x600dpi_photohigh",
-  "600x600dpi_photo",
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo3",
   NULL
 };
 
 static const char* canon_BJC_i950_modeuses_PPplus[] = {
-  "600x600dpi_photohigh",
-  "600x600dpi_photo",/*untestd*/
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo2",/*untested*/
+  NULL
+};
+
+static const char* canon_BJC_i950_modeuses_PPgloss[] = {
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo2",
   NULL
 };
 
@@ -2256,20 +2262,27 @@ static const char* canon_BJC_i950_modeuses_PPmatte[] = {
 };
 
 static const char* canon_BJC_i950_modeuses_coated[] = {
-  "600x600dpi_photohigh2",
+  "600x600dpi_photohigh",
+  "600x600dpi_photo3",
   "600x600dpi_photo",
-  "600x600dpi_photo2",
   NULL
 };
 
 static const char* canon_BJC_i950_modeuses_GlossyFilm[] = {
-  "600x600dpi_photohigh2",
+  "600x600dpi_photohigh",
   NULL
 };
 
 static const char* canon_BJC_i950_modeuses_inkjetHagaki[] = {
-  "600x600dpi_photohigh3",
-  "600x600dpi_photo3",
+  "600x600dpi_photohigh4",
+  "600x600dpi_photo4",
+  "600x600dpi_photodraft4",
+  NULL
+};
+
+static const char* canon_BJC_i950_modeuses_disc[] = {
+  "600x600dpi_photo5",
+  "600x600dpi_photodraft5",
   NULL
 };
 
@@ -2291,6 +2304,7 @@ static const char* canon_BJC_i950_modeuses_TShirt[] = {
 static const char* canon_BJC_i950_modeuses_Transparency[] = {
   "600x600dpi_std3",
   "600x600dpi_draft3",
+  "600x600dpi_draft4",
   NULL
 };
 
@@ -2303,12 +2317,14 @@ static const canon_modeuse_t canon_BJC_i950_modeuses[] = {
   { "Plain",            canon_BJC_i950_modeuses_plain, 0 },
   { "GlossyPro",	canon_BJC_i950_modeuses_PPpro, 0 },
   { "PhotopaperPlus",	canon_BJC_i950_modeuses_PPplus, 0 },
-  { "PhotopaperPlusDouble",canon_BJC_i950_modeuses_PPmatte, 0 },
+  { "PhotopaperPlusDouble",canon_BJC_i950_modeuses_PPgloss, 0 },
   { "PhotopaperMatte",	canon_BJC_i950_modeuses_PPmatte, 0 },
-  { "GlossyPaper",	canon_BJC_i950_modeuses_PPmatte, 0 },
+  { "GlossyPaper",	canon_BJC_i950_modeuses_PPgloss, 0 },
   { "Coated",		canon_BJC_i950_modeuses_coated, 0 },
-  { "InkJetHagaki", 	canon_BJC_i950_modeuses_inkjetHagaki, 0 },/*untested*/
+  { "InkJetHagaki", 	canon_BJC_i950_modeuses_inkjetHagaki, 0 },
   { "Hagaki", 	        canon_BJC_i950_modeuses_Hagaki, 0 },
+  { "DiscCompat", 	canon_BJC_i950_modeuses_disc, 0 },
+  { "DiscOthers", 	canon_BJC_i950_modeuses_disc, 0 },
   { "GlossyFilm", 	canon_BJC_i950_modeuses_GlossyFilm, 0 },
   { "TShirt",		canon_BJC_i950_modeuses_TShirt, 0 },
   { "Transparency",	canon_BJC_i950_modeuses_Transparency, 0 },
@@ -2339,13 +2355,14 @@ static const char* canon_BJC_i960_modeuses_PPpro[] = {
 
 static const char* canon_BJC_i960_modeuses_PPplus[] = {
   "600x600dpi_photohigh",
-  "600x600dpi_photo",/*untested*/
+  "600x600dpi_photo5",/*untested*/
   NULL
 };
 
-static const char* canon_BJC_i960_modeuses_PPplusDS[] = {
+
+static const char* canon_BJC_i960_modeuses_PPgloss[] = {
   "600x600dpi_photohigh",
-  "600x600dpi_photo",/*untested*/
+  "600x600dpi_photo2",
   NULL
 };
 
@@ -2355,16 +2372,10 @@ static const char* canon_BJC_i960_modeuses_PPmatte[] = {
   NULL
 };
 
-static const char* canon_BJC_i960_modeuses_PPgloss[] = {
-  "600x600dpi_photohigh",
-  "600x600dpi_photo",/*untested*/
-  NULL
-};
-
 static const char* canon_BJC_i960_modeuses_coated[] = {
   "600x600dpi_photohigh2",
   "600x600dpi_photo",
-  "600x600dpi_photo2",
+  "600x600dpi_photo5",
   NULL
 };
 
@@ -2374,12 +2385,18 @@ static const char* canon_BJC_i960_modeuses_inkjetHagaki[] = {
   NULL
 };
 
+static const char* canon_BJC_i960_modeuses_disc[] = {
+  "600x600dpi_photo4",
+  "600x600dpi_photodraft4",
+  NULL
+};
+
 static const char* canon_BJC_i960_modeuses_Hagaki[] = {
   "600x600dpi_high4",
   "600x600dpi_high5",
   "600x600dpi_std4",/*untested*/
   "600x600dpi_std5",
-  "600x600dpi_draft4",
+  "600x600dpi_draft5",
   "600x600dpi_draftmono4",
   "600x600dpi_draftmono5",
   NULL
@@ -2393,11 +2410,12 @@ static const char* canon_BJC_i960_modeuses_TShirt[] = {
 static const char* canon_BJC_i960_modeuses_Transparency[] = {
   "600x600dpi_std3",
   "600x600dpi_draft3",
+  "600x600dpi_draft4",/*untested*/
   NULL
 };
 
 static const char* canon_BJC_i960_modeuses_PPother[] = {
-  "600x600dpi_photo",/*untested*/
+  "600x600dpi_photo2",/*untested*/
   NULL
   };
 
@@ -2405,12 +2423,14 @@ static const canon_modeuse_t canon_BJC_i960_modeuses[] = {
   { "Plain",            canon_BJC_i960_modeuses_plain, DUPLEX_MODEREPL },
   { "GlossyPro",	canon_BJC_i960_modeuses_PPpro, 0 },
   { "PhotopaperPlus",	canon_BJC_i960_modeuses_PPplus, 0 },
-  { "PhotopaperPlusDouble",canon_BJC_i960_modeuses_PPplusDS, 0 },
+  { "PhotopaperPlusDouble",canon_BJC_i960_modeuses_PPgloss, 0 },
   { "PhotopaperMatte",	canon_BJC_i960_modeuses_PPmatte, 0 },
   { "GlossyPaper",	canon_BJC_i960_modeuses_PPgloss, 0 },
   { "Coated",		canon_BJC_i960_modeuses_coated, 0 },
-  { "InkJetHagaki", 	canon_BJC_i960_modeuses_inkjetHagaki, 0 },/*untested*/
-  { "Hagaki", 	        canon_BJC_i960_modeuses_Hagaki, 0 },/*untested*/
+  { "InkJetHagaki", 	canon_BJC_i960_modeuses_inkjetHagaki, 0 },
+  { "Hagaki", 	        canon_BJC_i960_modeuses_Hagaki, 0 },
+  { "DiscCompat", 	canon_BJC_i960_modeuses_disc, 0 },
+  { "DiscOthers", 	canon_BJC_i960_modeuses_disc, 0 },
   { "TShirt",		canon_BJC_i960_modeuses_TShirt, 0 },
   { "Transparency",	canon_BJC_i960_modeuses_Transparency, 0 },
   { "Envelope",		canon_BJC_i960_modeuses_Hagaki, 0 },
