@@ -292,6 +292,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 860i   (EXPERIMENTAL)
        Canon PIXMA 865R   (EXPERIMENTAL)
        Canon PIXMA 900PD  (EXPERIMENTAL)
+       Canon PIXMA 950i   (EXPERIMENTAL)
+       Canon PIXMA 960i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
